syntax = "proto3";

package todopackage;

service Todo {
    rpc createTodo(TodoItem) returns (TodoItem);
    // non si possono non mettere parametri, va inbdicato void
    rpc getTodos(void_nothing) returns (TodoItems);
    
}

message void_nothing {}

message TodoItem {
    int32 id = 1;
    string description = 2;
    string status = 3;
}

message TodoItems {
    repeated TodoItem items = 1;
}
